--- a/a.html
+++ b/a.html
@@ -29,7 +29,7 @@
   <body>
     <nav id="home">
       <div class="logo">
-        <a href="#home">Tabaswini P S</a>
+        <a href="#home"></a>
       </div>
       <ul class="showmenu">
         <li><a href="#home">Home</a></li>
@@ -50,7 +50,7 @@
     <div class="section-two">
       <div class="section-two__container">
         <div class="section-two__content">
-          <h1>HELLO I'M TABASWINI P S</h1>
+          <h1>HELLO I'M</h1>
           <h2 class="about__long">
             Full Stack <span>Developer </span>| Machine Learning<span>
               Engineer </span
