--- a/a.html
+++ b/a.html
@@ -29,7 +29,7 @@
   <body>
     <nav id="home">
       <div class="logo">
-        <a href="#home"></a>
+        <a href="#home">Tabaswini P S</a>
       </div>
       <ul class="showmenu">
         <li><a href="#home">Home</a></li>
@@ -50,7 +50,7 @@
     <div class="section-two">
       <div class="section-two__container">
         <div class="section-two__content">
-          <h1>HELLO I'M</h1>
+          <h1>HELLO I'M TABASWINI PS</h1>
           <h2 class="about__long">
             Full Stack <span>Developer </span>| Machine Learning<span>
               Engineer </span
@@ -84,6 +84,12 @@
                 style="position: relative; bottom: 4px; top: 11px"
                 height="36px"
                 width="40px"
+                style="
+                  position: relative;
+                  bottom: 2px;
+
+                  top: 12px;
+                "
             /></a>
             <a href="https://github.com/PSTabaswiniSivamorthy"
               ><img
@@ -107,7 +113,7 @@
       <div class="main">
         <img
           class="about__img"
-          src="images\img.jpeg"
+          src="D:\Portfolio\girl.jpg"
           height="380px"
           width="350px"
         />
@@ -125,7 +131,9 @@
             technology for positive impact.
           </p>
           <div class="icons__aboutme">
-            <a href="https://www.codechef.com/users/tabaswini_ps"
+            <a
+              href="https://www.codechef.com/users/tabaswini_ps"
+              style="border: none"
               ><img
                 src="images\icons8-codechef-48.png"
                 style="position: relative; bottom: 57px"
