--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <div class="main">
         <img
           class="about__img"
-          src="D:\Portfolio\images\girl.jpg"
+          src="images\girl.jpg"
           height="380px"
           width="350px"
         />
