--- a/index.html
+++ b/index.html
@@ -676,8 +676,8 @@
               ><i
                 class="fa-brands fa-linkedin"
                 style="color: #58d6df; font-size: 30px"
-              ></i>
-            </a>
+              ></i
+            ></a>
           </span>
           <span class="twitter">
             <a href="https://twitter.com/?lang=en"
@@ -707,7 +707,7 @@
         </ul>
       </div>
       <div class="last-line">
-        <p>&copy; Tabaswini PS | All Rights Reserved</p>
+        <p>&copy; Tabaswini PS</p>
       </div>
     </div>
 
