--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
     </nav>
 
-    <div class="section-two">
+    <section class="section-two">
       <div class="section-two__container">
         <div class="section-two__content">
           <h1>HELLO I'M TABASWINI PS</h1>
@@ -66,7 +66,8 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
+
     <section class="about" id="about">
       <div class="main">
         <img
@@ -562,7 +563,7 @@
 
         <h1 class="lets-connect">Let's connect</h1>
         <span class="contact_six">
-          <p><i class="fa fa-phone" aria-hidden="true"></i> 9345667850</p>
+          <p><i class="fa fa-phone" aria-hidden="true"></i> 9345677850</p>
           <p>
             <i class="fa fa-envelope" aria-hidden="true"></i>
             tabaswinips1222gmail.com
@@ -617,7 +618,7 @@
       </div>
     </div>
 
-    <div class="section-seven">
+    <footer class="section-seven">
       <div class="section-seven__container">
         <div class="connect__icons">
           <span class="mail">
@@ -657,8 +658,6 @@
       </div>
       <div class="list-seven">
         <ul class="unlist">
-          <li>FAQ</li>
-          <li>Services</li>
           <li>About</li>
           <li>Contact Me</li>
           <li>Privacy Policies</li>
@@ -667,7 +666,7 @@
       <div class="last-line">
         <p>&copy; Tabaswini PS</p>
       </div>
-    </div>
+    </footer>
 
     <script>
       const menus = document.querySelector(".menu");
