--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     
     
                     <div class="project-1">
-                        <img src="images/p4.jpg" alt="">
+                        <img src="images/fin.jpg" alt="">
                         <h2>Our Fintech AI</h2>
                         <p>Introducing a cutting-edge financial manager app with AI,
                             simulations, calculators, and friendly support, empowering young
