--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             <div class="Icons__container">
                 <a href="https://leetcode.com/TabaswiniPS/"><i class="fa-solid fa-code"></i></a>
 
-                <a href="https://github.com/PSTabaswiniSivamorthy"><i
+                <a href="https://www.linkedin.com/in/tabaswini-sivamoorthy-p-s-8g2212711/"><i
                         class="fa-brands fa-linkedin"></i></a>
-                <a href=""><i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/PSTabaswiniSivamorthy"><i class="fa-brands fa-github"></i></a>
                
             </div>
 
